fixes an overflow to the right issue on the wrapper.

--- a/docs/themes/mobile/tablet.css
+++ b/docs/themes/mobile/tablet.css
@@ -11,9 +11,7 @@ html, body{
 }
 		
 #main{
-	padding-bottom: 2.3em;
-	/*overflow: auto; commented out because of Firefox problems... */
-	z-index: 1000;
+	overflow-x: hidden;
 }
 
 body,ul,li {
@@ -73,10 +71,11 @@ body,ul,li {
 }
 #wrapper{
 	width:100%;
-	overflow:hidden;
+	/*overflow:hidden;*/
 	overflow: auto;
 	min-height: 100%;
 	background-image: url(images/idi_background.png);
+
 
 	
 }
@@ -611,12 +610,18 @@ h1#section-title {
 
 #footer{
 	/*width:100%;*/
-	height:2.3em;
+	/*height:2.3em;
 	background-color: #4b6b90;
 	margin-top: -2.3em;
 	position: relative;
-	clear: both;
+	clear: both;*/
 	background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#999), to(black));
+		height:2.3em;
+
+	margin-top: -2.3em;
+	position: relative;
+	clear: both;
+	
 }
 div#footer-links{
 	margin: 0 auto;
@@ -2488,6 +2493,4 @@ ul.sequence-links li a:active:before {
 .add-alt a:active:after {
     background:#730800;
 }
-
-
 
